# vla-robustness-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-python.yml
examples/mock_episode_set/: episodes.jsonl
examples/mock_policy/: README.md
src/vla_robustness_kit/: __init__.py  cli.py  metrics.py  report.py
src/vla_robustness_kit/adapters/: __init__.py  lerobot.py  mock_policy.py  rlds.py
src/vla_robustness_kit/perturbations/: __init__.py  language.py  metadata.py  task_phase.py  vision.py
tests/: test_cli.py  test_metadata.py  test_metrics.py  test_perturbations.py
