[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-robustness-kit"
version = "0.1.0"
description = "Simulator-light diagnostics for VLA policy robustness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne", email = "opensource@auraone.ai" }]
keywords = ["robotics", "vla", "robustness", "evals", "lerobot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3"
]

[project.scripts]
vla-robustness-kit = "vla_robustness_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

